AB#214480: fix margin on mobile size.

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/recommendations-module/_recommendations-module.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/recommendations-module/_recommendations-module.scss
@@ -72,12 +72,6 @@
     }
   }
 
-  .swiper-wrapper{
-    @media (max-width: 600px) {
-      margin-left: -8%;
-    }
-  }
-
   // increasing specificity to avoid using !important
   .recommendations-swiper-container.swiper-container-horizontal
     > .swiper-scrollbar {
